src/test/ui/closures/2229_closure_analysis/patterns-capture-analysis.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:10:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:31:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:52:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:68:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:90:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/patterns-capture-analysis.rs:114:14
   |
LL |     let c =  #[rustc_capture_analysis]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:14:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:17:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:14:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:17:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:34:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             _ => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:55:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             SingleVariant::Points(_) => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:71:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:74:15
   |
LL |         match variant {
   |               ^^^^^^^
note: Capturing variant[(0, 0)] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:74:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:71:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:74:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:93:5
   |
LL | /     || {
LL | |
LL | |         match array {
LL | |             [_,_,_] => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:117:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:120:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:117:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:120:15
   |
LL |         match variant {
   |               ^^^^^^^

error: aborting due to 15 previous errors

For more information about this error, try `rustc --explain E0658`.
